@@ -1,3 +1,12 @@
+2011-09-02  James Robinson  <jamesr@chromium.org>
+
+        Compile fix for mac build.
+
+        * wtf/CheckedArithmetic.h:
+        (WTF::operator+):
+        (WTF::operator-):
+        (WTF::operator*):
+
 2011-08-30  Matthew Delaney  <mdelaney@apple.com>
 
         Read out of bounds in sUnpremultiplyData_RGBA8888 / ImageBufferData::getData
